--- a/easy-coding-standard.neon
+++ b/easy-coding-standard.neon
@@ -2,7 +2,7 @@
 # Each project needs to have its own `easy-coding-standard.neon` file in the root path and include base standard like:
 #
 # includes:
-#   - vendor/ras/sniffs/easy-coding-standard.neon
+#   - vendor/rasta/sniffs/easy-coding-standard.neon
 #
 
 # the checkers aka fixers.
@@ -29,7 +29,7 @@ checkers:
   - PhpCsFixer\Fixer\CastNotation\NoShortBoolCastFixer # no more `!!$var` from legacy codes!
   - PhpCsFixer\Fixer\Whitespace\NoExtraConsecutiveBlankLinesFixer
   - PhpCsFixer\Fixer\Basic\BracesFixer # placement of curly braces
-  - Ras\Sniffs\ControlStructures\ControlSignatureSniff
+  - Rasta\Sniffs\ControlStructures\ControlSignatureSniff
   - PHP_CodeSniffer\Standards\PEAR\Sniffs\Functions\ValidDefaultValueSniff
 
   # fixers with simple args
